# Slicer-TensorFlow

./: CMakeLists.txt  README.md
Examples/: README.md
Examples/Example 1/10-18-2011-NA-MR prostaat kanker detectie WDSmc MCAPRODETW-45493/300.000000-Segmentation-7.701/: 1-1.dcm
Examples/Example 2/10-24-2011-NA-MC prostaat kliniek detectie-mc MCPROSKL30-92047/300.000000-Segmentation-4.232/: 1-1.dcm
Examples/Example 3/10-21-2011-NA-MR prostaat kanker detectiemc MCAPRODET-97608/300.000000-Segmentation-2.126/: 1-1.dcm
Examples/Example 4/10-21-2011-NA-MR prostaat kanker detectie WDSmc MCAPRODETW-12287/300.000000-Segmentation-9.894/: 1-1.dcm
TFSegmentation/: CMakeLists.txt  TFSegmentation.py
TFSegmentation/Resources/: UserModels - Copie.txt  UserModels.txt
TFSegmentation/Resources/UI/: TFSegmentation.ui
